# adr-graph

./: .gitignore  README.md  pyproject.toml
src/adr_graph/: __init__.py  __main__.py  config.py  exports.py  formatters.py  graph.py  markdown_ld_renderer.py  mutate.py  parser.py  server.py
tests/: test_adr_graph.py
